@@ -8,6 +8,7 @@ Post-v2.16.0
        by default.  'other_config:dpdk-socket-limit' can be set equal to
        the 'other_config:dpdk-socket-mem' to preserve the legacy memory
        limiting behavior.
+     * EAL argument --in-memory is applied by default if supported.
      * Add hardware offload support for matching IPv4/IPv6 frag types
        (experimental).
      * Add support for DPDK 21.11.
